force-app/main/default/objects/Forecast_Override__c/Forecast_Override__c.object-meta.xml
<CustomObject>
    <description>Core forecasting override record capturing manager and rep adjustments across hierarchy levels.</description>
    <label>Forecast Override</label>
    <nameField><label>Forecast Override Name</label><type>AutoNumber</type><displayFormat>FO-{000000}</displayFormat></nameField>
    <pluralLabel>Forecast Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>