force-app/main/default/objects/Forecast_Override__c/fields/Close_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Override__c</fullName>
    <label>Close Date Override</label>
    <description>Close Date Override</description>
    <type>Date</type>
</CustomField>