force-app/main/default/objects/Forecast_Override__c/fields/Close_Probability__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability__c</fullName>
    <label>Close Probability</label>
    <description>Close Probability</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>