force-app/main/default/objects/Forecast_Override__c/fields/Close_Probability_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability_Confidence__c</fullName>
    <label>Close Probability Confidence</label>
    <description>Close Probability Confidence</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>