force-app/main/default/objects/Forecast_Override__c/fields/Close_Probability_Factors__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability_Factors__c</fullName>
    <label>Close Probability Factors</label>
    <description>Close Probability Factors</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>