force-app/main/default/objects/Forecast_Override__c/fields/Close_Probability_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability_Model_Version__c</fullName>
    <label>Close Probability Model Version</label>
    <description>Close Probability Model Version</description>
    <type>Text</type>
    <length>20</length>
</CustomField>