force-app/main/default/objects/Forecast_Override__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <description>Comment</description>
    <type>TextArea</type>
</CustomField>