force-app/main/default/objects/Forecast_Override__c/fields/CRM_Divergence__c.field-meta.xml
<CustomField>
    <fullName>CRM_Divergence__c</fullName>
    <label>CRM Divergence</label>
    <description>CRM Divergence</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>