force-app/main/default/objects/Forecast_Override__c/fields/CRM_Divergence_Details__c.field-meta.xml
<CustomField>
    <fullName>CRM_Divergence_Details__c</fullName>
    <label>CRM Divergence Details</label>
    <description>CRM Divergence Details</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>