force-app/main/default/objects/Forecast_Override__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <description>Currency Code</description>
    <type>Text</type>
    <length>5</length>
</CustomField>