force-app/main/default/objects/Forecast_Override__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <description>Exchange Rate</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>