force-app/main/default/objects/Forecast_Override__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <description>External Id</description>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>