force-app/main/default/objects/Forecast_Override__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category</label>
    <description>Forecast Category</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Commit</fullName><default>false</default><label>Commit</label></value>
            <value><fullName>Best_Case</fullName><default>false</default><label>Best_Case</label></value>
            <value><fullName>Pipeline</fullName><default>false</default><label>Pipeline</label></value>
            <value><fullName>Closed_Won</fullName><default>false</default><label>Closed_Won</label></value>
            <value><fullName>Lost</fullName><default>false</default><label>Lost</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>