force-app/main/default/objects/Forecast_Override__c/fields/Forecast_Group__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Group__c</fullName>
    <label>Forecast Group</label>
    <description
  >The Forecast Group this override belongs to. Required after Phase B \u2014 every override is scoped to a concrete group (the auto-created "All Opportunities" group is used when there's only one group).</description>
    <referenceTo>Forecast_Group__c</referenceTo>
    <relationshipName>Forecast_Overrides</relationshipName>
    <relationshipLabel>Forecast Overrides</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>