force-app/main/default/objects/Forecast_Override__c/fields/Forecast_Participant__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Participant__c</fullName>
    <label>Forecast Participant</label>
    <description>Forecast Participant</description>
    <type>Lookup</type>
    <referenceTo>Forecast_Participant__c</referenceTo>
    <relationshipLabel>Forecast Overrides</relationshipLabel>
    <relationshipName>Forecast_Overrides_Part</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>