force-app/main/default/objects/Forecast_Override__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <label>Forecast Period</label>
    <description>Forecast Period</description>
    <type>Lookup</type>
    <referenceTo>Forecast_Period__c</referenceTo>
    <relationshipLabel>Forecast Overrides</relationshipLabel>
    <relationshipName>Forecast_Overrides</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>