force-app/main/default/objects/Forecast_Override__c/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <label>Hierarchy Level</label>
    <description>Hierarchy Level</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>