force-app/main/default/objects/Forecast_Override__c/fields/Local_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency_Code__c</fullName>
    <label>Local Currency Code</label>
    <description>Local Currency Code</description>
    <type>Text</type>
    <length>5</length>
</CustomField>