force-app/main/default/objects/Forecast_Override__c/fields/Metric_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_Value__c</fullName>
    <label>Metric 1 Value</label>
    <description>Metric 1 Value</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>