force-app/main/default/objects/Forecast_Override__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Notes</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>