force-app/main/default/objects/Forecast_Override__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Opportunity</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Forecast Overrides</relationshipLabel>
    <relationshipName>Forecast_Overrides_Opp</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>