force-app/main/default/objects/Forecast_Override__c/fields/Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval__c</fullName>
    <label>Pending Approval</label>
    <description>Pending Approval</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>