force-app/main/default/objects/Forecast_Override__c/fields/Previous_Level_Override__c.field-meta.xml
<CustomField>
    <fullName>Previous_Level_Override__c</fullName>
    <label>Previous Level Override</label>
    <description>Override for this record by the level below</description>
    <type>Lookup</type>
    <referenceTo>Forecast_Override__c</referenceTo>
    <relationshipLabel>Next Level Overrides</relationshipLabel>
    <relationshipName>Next_Level_Overrides</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>