force-app/main/default/objects/Forecast_Override__c/fields/Previous_Period_Override__c.field-meta.xml
<CustomField>
    <fullName>Previous_Period_Override__c</fullName>
    <label>Previous Period Override</label>
    <description>Override for this record in prior period</description>
    <type>Lookup</type>
    <referenceTo>Forecast_Override__c</referenceTo>
    <relationshipLabel>Next Period Overrides</relationshipLabel>
    <relationshipName>Next_Period_Overrides</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>