force-app/main/default/objects/Forecast_Override__c/fields/Source_Record_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Deleted__c</fullName>
    <label>Source Record Deleted</label>
    <description>Source Record Deleted</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>