force-app/main/default/objects/Forecast_Override__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Status</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>false</default><label>New</label></value>
            <value><fullName>Saved</fullName><default>false</default><label>Saved</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Frozen</fullName><default>false</default><label>Frozen</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>