force-app/main/default/objects/Forecast_Override__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <label>Submitted On</label>
    <description>Submitted On</description>
    <type>DateTime</type>
</CustomField>