force-app/main/default/objects/Forecast_Override__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <description>User</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Forecast Overrides</relationshipLabel>
    <relationshipName>Forecast_Overrides_User</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>