force-app/main/default/objects/Forecast_Override__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <label>Valid</label>
    <description>Valid</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>